# phlawd

./: .gitignore  CMakeLists.txt  DBSeq.cpp  DBSeq.h  EDNAFULL  FEATURES_TO_ADD  Makefile  Makefile.MAC  PHLAWD.10_5.MAC  PHLAWD.MAC  README  SQLiteConstructor.cpp  SQLiteConstructor.h  SQLiteDBController.cpp  SQLiteDBController.h  SQLiteProfiler.cpp  SQLiteProfiler.h  SQLiteTreeNameConvertor.cpp  SQLiteTreeNameConvertor.h  SWPS3_DynProgr_scalar.cpp  SWPS3_DynProgr_scalar.h  SWPS3_DynProgr_sse_byte.cpp  SWPS3_DynProgr_sse_byte.h  SWPS3_DynProgr_sse_short.cpp  SWPS3_Same_seq_pthread.cpp  SWPS3_Same_seq_pthread.h  SWPS3_matrix.cpp  SWPS3_matrix.h  SWPS3_swps3.cpp  SWPS3_swps3.h  Same_seq_pthread.cpp  Same_seq_pthread.h  SmithWatermanGotoh.cpp  main.cpp  rbcL.phlawd  sequence.cpp  utils.cpp  utils.h
PHLAWDGU/: PHLAWDGU.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
create_database/: enter_names_dmp_pysqlite  load_database  load_gb_file_pysqlite.py  merge_old_names_in_sequences  rebuild_tree_pysqlite  ungz_send_to_load_all_gb_files  ungz_send_to_update_all_gb_files  update_database  update_names_dmp_pysqlite
examples/: rbcL.phlawd
src/: CMakeLists.txt  DBSeq.cpp  DBSeq.h  GenBankReader.cpp  GenBankReader.h  Makefile  Makefile.MAC  Makefile.in  Makefile.nosse  PHLAWD.MAC  README.MAC  SQLiteConstructor.cpp  SQLiteConstructor.h  SQLiteDBController.cpp  SQLiteDBController.h  SQLiteProfiler.cpp  SQLiteProfiler.h  SQLiteTreeNameConvertor.cpp  SWPS3_DynProgr_sse_short.h  SWPS3_Same_seq_pthread.cpp  SWPS3_Same_seq_pthread.h  SWPS3_fasta.cpp  SWPS3_fasta.h  SWPS3_matrix.cpp  SWPS3_swps3.cpp  SWPS3_swps3.h  Same_seq_pthread.h  SmithWatermanGotoh.h  config.h.in  configure  configure.ac  fasta_util.cpp  genedb.cpp  genedb.h  libsqlitewrapped.h  main.cpp  node.cpp  node.h  sequence.cpp  sequence.h  (+3 more)
